--- a/AccountUser/templates/user/update_user_profile.html
+++ b/AccountUser/templates/user/update_user_profile.html
@@ -116,10 +116,10 @@
   
    <div class="row mt-3">
           <div class="col-6 inputWidthIcone">
-          {% render_field form.first_name class="form-control" placeholder="First Name" name="first_name" %}<i class="fa-solid fa-flag ms-3"></i>
+          {% render_field form.first_name class="form-control" placeholder="First Name" name="first_name" %}<i class="fa fa-user ms-3"></i>
           </div>
           <div class="col-6 inputWidthIcone">
-          {% render_field form.last_name class="form-control" placeholder="Last Name" name="last_name" %}<i class="fa fa-map-pin ms-3" aria-hidden="true"></i>
+          {% render_field form.last_name class="form-control" placeholder="Last Name" name="last_name" %}<i class="fa-solid fa-user ms-3" aria-hidden="true"></i>
           </div>
           </div>
     <div class="row mt-3 " >
@@ -145,9 +145,9 @@
           </div>
           </div>
          <div class="col-6 mt-2 mb-4">
-            <label for="email">Hotel Contact Persion</label>
+            <label for="email">Hotel Contact Person</label>
             <div class="inputWidthIcone">
-            {% render_field form.contact_number class="form-control mt-2 mb-2" placeholder="Contact" %}<i class="fa-solid fa-children"></i>
+            {% render_field form.contact_number class="form-control mt-2 mb-2" placeholder="Contact" %}<i class="fa-solid fa-phone"></i>
             </div>
           </div> 
 
