--- a/AccountUser/templates/user/user_profile.html
+++ b/AccountUser/templates/user/user_profile.html
@@ -15,6 +15,14 @@
    width: 80vw;
  }
 
+ .btn-outline-primary:hover{
+    background-color:#7166f0!important;
+    border-color: #7166f0;
+}
+ .btn-outline-primary{
+  border-color: #7166f0;
+  color:#7166f0;
+ }
 </style>
 {% endblock %}
 {% block homecontent %}
