Added icon in adding hotels page

--- a/RealEstateApp/templates/hotels/create_hotels.html
+++ b/RealEstateApp/templates/hotels/create_hotels.html
@@ -154,7 +154,7 @@
           <div class="col-4 ">
             <label for="number">Rooms</label>
             <div class="inputWidthIcone">
-            {% render_field form.bed_room class="form-control mt-2" placeholder="Rooms" %}<i class="fa-solid fa-bed"></i>
+            {% render_field form.bed_room class="form-control mt-2" placeholder="Rooms" %}<i class="fas fa-door-closed"></i>
             </div>
           </div>
           <div class="col-4 ">
@@ -170,7 +170,7 @@
             <label for="email">Adults/Children</label>
             <div class="inputWidthIcone">
             {% render_field form.bed_type class="form-control mt-2 adults_children" placeholder="Adults/Children" %}
-             <i class="fa-solid fa-person-dress"></i>
+             <i class="fas fa-restroom"></i>
             </div>
           </div>
           <div class="col-4 ">
@@ -182,14 +182,14 @@
           <div class="col-4 ">
             <label for="email">Cancellations</label>
             <div class="inputWidthIcone">
-            {% render_field form.cancellation class="form-control mt-2 mb-2 adults_children" placeholder="Cancellations" %}<i class="fa-solid fa-children"></i>
+            {% render_field form.cancellation class="form-control mt-2 mb-2 adults_children" placeholder="Cancellations" %}<i class="fa fa-solid fa-paypal"></i>
             </div>
           </div>
         </div>
         <div class="col-6 mt-2">
             <label for="email">Hotel Contact Persion</label>
             <div class="inputWidthIcone">
-            {% render_field form.contact_number class="form-control mt-2 mb-2" placeholder="Contact" %}<i class="fa-solid fa-children"></i>
+            {% render_field form.contact_number class="form-control mt-2 mb-2" placeholder="Contact" %}<i class="fa-solid fa-phone"></i>
             </div>
           </div>
           <div class="drop-zone mt-5">
